make add todo,deleteTodo, and half of edittodo features

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,4 +119,13 @@
   body {
     @apply bg-background text-foreground;
   }
+  input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+
+    input[type="date"] {
+    -moz-appearance: textfield;
+  }
+
 }
